[gd_scene load_steps=6 format=3 uid="uid://cgqd5ldr1rjwr"]

[ext_resource type="Script" path="res://addons/rewind_story_engine/location_editor/location_editor.gd" id="1_tme22"]
[ext_resource type="Texture2D" uid="uid://b87j4fgy3hbgy" path="res://addons/rewind_story_engine/icons/File.svg" id="2_qd1ex"]
[ext_resource type="Script" path="res://addons/rewind_story_engine/camera_2d_dragging.gd" id="3_fclsd"]
[ext_resource type="Script" path="res://addons/rewind_story_engine/camera_info.gd" id="3_lofce"]
[ext_resource type="Texture2D" uid="uid://mqhlbtsjuvi8" path="res://addons/rewind_story_engine/icons/Eraser.svg" id="3_wjqll"]

[node name="LocationEditor" type="Control" node_paths=PackedStringArray("location_item_list", "location_name_line_edit", "location_open_scene_file_dialog", "location_path_label", "location_preview_viewport", "location_preview_camera")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tme22")
location_item_list = NodePath("HSplitContainer/ItemList")
location_name_line_edit = NodePath("HSplitContainer/VBoxContainer/Name/Panel/LineEdit")
location_open_scene_file_dialog = NodePath("FileDialog")
location_path_label = NodePath("HSplitContainer/VBoxContainer/PathToScene/Panel/Path")
location_preview_viewport = NodePath("HSplitContainer/VBoxContainer/Preview/Panel/MarginContainer/SubViewportContainer/SubViewport")
location_preview_camera = NodePath("HSplitContainer/VBoxContainer/Preview/Panel/MarginContainer/SubViewportContainer/SubViewport/Camera2D")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/Name"]
layout_mode = 2
text = "Название локации:"

[node name="Panel" type="Panel" parent="HSplitContainer/VBoxContainer/Name"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/VBoxContainer/Name/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Название локации..."
flat = true

[node name="PathToScene" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="HSplitContainer/VBoxContainer/PathToScene"]
layout_mode = 2
text = "Путь к сцене локации:"

[node name="OpenFile" type="Button" parent="HSplitContainer/VBoxContainer/PathToScene"]
layout_mode = 2
text = "Выбрать файл"
icon = ExtResource("2_qd1ex")

[node name="Panel" type="Panel" parent="HSplitContainer/VBoxContainer/PathToScene"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Path" type="Label" parent="HSplitContainer/VBoxContainer/PathToScene/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
vertical_alignment = 1
clip_text = true

[node name="Erase" type="Button" parent="HSplitContainer/VBoxContainer/PathToScene"]
layout_mode = 2
icon = ExtResource("3_wjqll")

[node name="Preview" type="VBoxContainer" parent="HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HSplitContainer/VBoxContainer/Preview"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Предпросмотр локации"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="HSplitContainer/VBoxContainer/Preview"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/VBoxContainer/Preview/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer/VBoxContainer/Preview/Panel/MarginContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/VBoxContainer/Preview/Panel/MarginContainer/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HSplitContainer/VBoxContainer/Preview/Panel/MarginContainer/SubViewportContainer/SubViewport"]
script = ExtResource("3_fclsd")

[node name="PreviewSettings" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/Preview/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 152.0
offset_bottom = 35.0

[node name="ResetCamera" type="Button" parent="HSplitContainer/VBoxContainer/Preview/Panel/PreviewSettings"]
layout_mode = 2
text = "Сбросить камеру"

[node name="CameraInfo" type="Label" parent="HSplitContainer/VBoxContainer/Preview/Panel" node_paths=PackedStringArray("camera")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -27.0
offset_right = 428.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Позиция: (0.00, 0.00)
Масштабирование: (1.00, 1.00)"
script = ExtResource("3_lofce")
camera = NodePath("../MarginContainer/SubViewportContainer/SubViewport/Camera2D")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Открыть"
file_mode = 0
filters = PackedStringArray("*.tscn")

[connection signal="item_selected" from="HSplitContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="text_changed" from="HSplitContainer/VBoxContainer/Name/Panel/LineEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/PathToScene/OpenFile" to="." method="_on_open_file_pressed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/PathToScene/Erase" to="." method="_on_erase_pressed"]
[connection signal="gui_input" from="HSplitContainer/VBoxContainer/Preview/Panel/MarginContainer/SubViewportContainer" to="." method="_on_sub_viewport_container_gui_input"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/Preview/Panel/PreviewSettings/ResetCamera" to="." method="_on_reset_camera_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
